# aionfm-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: usage.md
examples/: forecast.rs
scripts/: check.sh
src/: client.rs  config.rs  error.rs  lib.rs  models.rs  request.rs  retry.rs
