[package]
name = "aionfm-sdk"
description = "Typed async Rust SDK for the AionFM API."
edition = "2021"
license = "DOSL-IIE-1.0"
version = "0.1.0"
authors = ["Dust LLC and Contributors"]

[dependencies]
aionfm-utils = { path = "../aionfm/crates/utils" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
